packages/react-native/cpp/derec_ffi.h

typedef struct DeRecError {
  int32_t category;
  int32_t code;
  /**
   * Owned C string. Null on success. Released by [`derec_free_error`].
   */
  char *message;
  /**
   * Valid when `code == DEREC_CODE_NON_OK_STATUS`.
   */
  int32_t peer_status;
  /**
   * Owned C string. Null when not applicable. Released by [`derec_free_error`].
   */
  char *peer_memo;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t expected;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t got;
} DeRecError;
typedef struct DeRecBuffer {
  uint8_t *ptr;
  size_t len;
} DeRecBuffer;
typedef struct ProduceGetShareRequestMessageResult {
  struct DeRecError error;
  struct DeRecBuffer request_wire_bytes;
} ProduceGetShareRequestMessageResult;
typedef struct ExtractGetShareRequestResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * Inner `GetShareRequestMessage` proto bytes for chaining into
   * [`produce_get_share_response_message`].
   */
  struct DeRecBuffer request_proto_bytes;
} ExtractGetShareRequestResult;
typedef struct ProduceGetShareResponseMessageResult {
  struct DeRecError error;
  struct DeRecBuffer response_wire_bytes;
} ProduceGetShareResponseMessageResult;
typedef struct ExtractGetShareResponseResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * Inner `GetShareResponseMessage` proto bytes. Accumulate across helpers
   * and pass to [`recover_from_share_responses`].
   */
  struct DeRecBuffer response_proto_bytes;
} ExtractGetShareResponseResult;
typedef struct RecoverFromShareResponsesResult {
  struct DeRecError error;
  struct DeRecBuffer secret_data;
} RecoverFromShareResponsesResult;
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceGetShareRequestMessageResult produce_get_share_request_message(uint64_t channel_id,
                                                                             uint64_t secret_id,
                                                                             uint32_t version,
                                                                             const uint8_t *shared_key_ptr,
                                                                             size_t shared_key_len,
                                                                             const uint8_t *reply_to_ptr,
                                                                             size_t reply_to_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractGetShareRequestResult extract_get_share_request(const uint8_t *request_ptr,
                                                              size_t request_len,
                                                              const uint8_t *shared_key_ptr,
                                                              size_t shared_key_len);
/**
 * `request_proto_ptr` / `request_proto_len` must be the `request_proto_bytes`
 * returned by [`extract_get_share_request`].
 *
 * `stored_share_proto_ptr` / `stored_share_proto_len` must be the serialized
 * inner `StoreShareRequestMessage` the helper persisted at sharing time —
 * typically the `request_proto_bytes` returned by `extract_store_share_request`.
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceGetShareResponseMessageResult produce_get_share_response_message(uint64_t channel_id,
                                                                               const uint8_t *request_proto_ptr,
                                                                               size_t request_proto_len,
                                                                               const uint8_t *stored_share_proto_ptr,
                                                                               size_t stored_share_proto_len,
                                                                               const uint8_t *shared_key_ptr,
                                                                               size_t shared_key_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractGetShareResponseResult extract_get_share_response(const uint8_t *response_ptr,
                                                                size_t response_len,
                                                                const uint8_t *shared_key_ptr,
                                                                size_t shared_key_len);
/**
 * `responses_ptr` / `responses_len` must follow the binary format documented
 * at the module level.
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct RecoverFromShareResponsesResult recover_from_share_responses(const uint8_t *responses_ptr,
                                                                    size_t responses_len,
                                                                    uint64_t secret_id,
                                                                    uint32_t version);